--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <li>
         <a href='pages/testing_speaker_encoder/index.html'>Initial testing of the speaker encoder</a>
       </li>
+      <li>
+        <a href='pages/final_results/index.html'>Final Results</a>
+      </li>
     </ul>
 
   </body>
