--- a/pages/final_results/index.html
+++ b/pages/final_results/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../../styles.css">
     </head>
     <body>
-        <h1>Audio samples for the paper <i>Fast and Controllable Novel Speaker Generation</i></h1>
+        <h1>Audio samples for the paper <i>Modelling Hundreds of Real Speakers to Construct Novel Speakers</i></h1>
         <a href='../../index.html'>Back to home</a>
         <div>
             <h2>The 247 speakers</h2>
